src/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "';'", "','", 
                     "'='", "':'", "'..'", "'+'", "'*'", "'<>'", "'<'", 
                     "'<='", "'-'", "'/'", "'>'", "'>='", "':='" ]

    symbolicNames = [ "<INVALID>", "LB", "RB", "LQ", "RQ", "SEMI", "CM", 
                      "EQ", "COL", "DD", "ADD", "MUL", "NOTEQ", "LESSTN", 
                      "LESSEQ", "SUBNE", "DIVSI", "GRETN", "GREEQ", "ASSI", 
                      "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", "DO", 
                      "IF", "THEN", "ELSE", "RETURN", "WHILE", "BEGIN", 
                      "END", "FUNCTION", "PROCEDURE", "VAR", "TRUE", "FALSE", 
                      "ARRAY", "OF", "REAL", "BOOLEAN", "INTEGER", "STRING", 
                      "NOT", "AND", "OR", "DIV", "MOD", "WITH", "WS", "ID", 
                      "INTLIT", "REALLIT", "STRINGLIT", "CMT", "BLKCMT", 
                      "TRACMT", "BLCMT", "LINECMT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_manydeclares = 1
    RULE_boollit = 2
    RULE_typee = 3
    RULE_primtype = 4
    RULE_arrtype = 5
    RULE_intt = 6
    RULE_exp1 = 7
    RULE_exp2 = 8
    RULE_exp3 = 9
    RULE_exp4 = 10
    RULE_exp5 = 11
    RULE_exp6 = 12
    RULE_factor = 13
    RULE_varde = 14
    RULE_var_list = 15
    RULE_vartype = 16
    RULE_idlist = 17
    RULE_funcde = 18
    RULE_funcde1 = 19
    RULE_parade = 20
    RULE_parade1 = 21
    RULE_compostate = 22
    RULE_procede = 23
    RULE_procede1 = 24
    RULE_statement = 25
    RULE_semistatement = 26
    RULE_nomistatement = 27
    RULE_assignstate = 28
    RULE_lhs = 29
    RULE_ifstate = 30
    RULE_whilestate = 31
    RULE_forstate = 32
    RULE_breakstate = 33
    RULE_contstate = 34
    RULE_stopstate = 35
    RULE_returnsate = 36
    RULE_returnexp = 37
    RULE_returnnoexp = 38
    RULE_parade2 = 39
    RULE_withstate = 40
    RULE_callstate = 41
    RULE_expression = 42
    RULE_indexexpre = 43
    RULE_invoexpre = 44
    RULE_exprlist = 45

    ruleNames =  [ "program", "manydeclares", "boollit", "typee", "primtype", 
                   "arrtype", "intt", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "factor", "varde", "var_list", "vartype", "idlist", 
                   "funcde", "funcde1", "parade", "parade1", "compostate", 
                   "procede", "procede1", "statement", "semistatement", 
                   "nomistatement", "assignstate", "lhs", "ifstate", "whilestate", 
                   "forstate", "breakstate", "contstate", "stopstate", "returnsate", 
                   "returnexp", "returnnoexp", "parade2", "withstate", "callstate", 
                   "expression", "indexexpre", "invoexpre", "exprlist" ]

    EOF = Token.EOF
    LB=1
    RB=2
    LQ=3
    RQ=4
    SEMI=5
    CM=6
    EQ=7
    COL=8
    DD=9
    ADD=10
    MUL=11
    NOTEQ=12
    LESSTN=13
    LESSEQ=14
    SUBNE=15
    DIVSI=16
    GRETN=17
    GREEQ=18
    ASSI=19
    BREAK=20
    CONTINUE=21
    FOR=22
    TO=23
    DOWNTO=24
    DO=25
    IF=26
    THEN=27
    ELSE=28
    RETURN=29
    WHILE=30
    BEGIN=31
    END=32
    FUNCTION=33
    PROCEDURE=34
    VAR=35
    TRUE=36
    FALSE=37
    ARRAY=38
    OF=39
    REAL=40
    BOOLEAN=41
    INTEGER=42
    STRING=43
    NOT=44
    AND=45
    OR=46
    DIV=47
    MOD=48
    WITH=49
    WS=50
    ID=51
    INTLIT=52
    REALLIT=53
    STRINGLIT=54
    CMT=55
    BLKCMT=56
    TRACMT=57
    BLCMT=58
    LINECMT=59
    UNCLOSE_STRING=60
    ILLEGAL_ESCAPE=61
    ERROR_CHAR=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def manydeclares(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ManydeclaresContext)
            else:
                return self.getTypedRuleContext(MPParser.ManydeclaresContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.manydeclares()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 97
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ManydeclaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varde(self):
            return self.getTypedRuleContext(MPParser.VardeContext,0)


        def funcde(self):
            return self.getTypedRuleContext(MPParser.FuncdeContext,0)


        def procede(self):
            return self.getTypedRuleContext(MPParser.ProcedeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_manydeclares

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitManydeclares" ):
                return visitor.visitManydeclares(self)
            else:
                return visitor.visitChildren(self)




    def manydeclares(self):

        localctx = MPParser.ManydeclaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_manydeclares)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.varde()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.funcde()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.procede()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BoollitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRUE(self):
            return self.getToken(MPParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(MPParser.FALSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_boollit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoollit" ):
                return visitor.visitBoollit(self)
            else:
                return visitor.visitChildren(self)




    def boollit(self):

        localctx = MPParser.BoollitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_boollit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            _la = self._input.LA(1)
            if not(_la==MPParser.TRUE or _la==MPParser.FALSE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def getRuleIndex(self):
            return MPParser.RULE_typee

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypee" ):
                return visitor.visitTypee(self)
            else:
                return visitor.visitChildren(self)




    def typee(self):

        localctx = MPParser.TypeeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typee)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.ARRAY) | (1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimtype" ):
                return visitor.visitPrimtype(self)
            else:
                return visitor.visitChildren(self)




    def primtype(self):

        localctx = MPParser.PrimtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_primtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LQ(self):
            return self.getToken(MPParser.LQ, 0)

        def intt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.InttContext)
            else:
                return self.getTypedRuleContext(MPParser.InttContext,i)


        def DD(self):
            return self.getToken(MPParser.DD, 0)

        def RQ(self):
            return self.getToken(MPParser.RQ, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primtype(self):
            return self.getTypedRuleContext(MPParser.PrimtypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_arrtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrtype" ):
                return visitor.visitArrtype(self)
            else:
                return visitor.visitChildren(self)




    def arrtype(self):

        localctx = MPParser.ArrtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arrtype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(MPParser.ARRAY)
            self.state = 111
            self.match(MPParser.LQ)
            self.state = 112
            self.intt()
            self.state = 113
            self.match(MPParser.DD)
            self.state = 114
            self.intt()
            self.state = 115
            self.match(MPParser.RQ)
            self.state = 116
            self.match(MPParser.OF)
            self.state = 117
            self.primtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InttContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def SUBNE(self):
            return self.getToken(MPParser.SUBNE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_intt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntt" ):
                return visitor.visitIntt(self)
            else:
                return visitor.visitChildren(self)




    def intt(self):

        localctx = MPParser.InttContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_intt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUBNE:
                self.state = 119
                self.match(MPParser.SUBNE)


            self.state = 122
            self.match(MPParser.INTLIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self):
            return self.getTypedRuleContext(MPParser.Exp2Context,0)


        def exp1(self):
            return self.getTypedRuleContext(MPParser.Exp1Context,0)


        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp1" ):
                return visitor.visitExp1(self)
            else:
                return visitor.visitChildren(self)



    def exp1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_exp1, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.exp2()
            self._ctx.stop = self._input.LT(-1)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 137
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.Exp1Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp1)
                        self.state = 127
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")

                        self.state = 128
                        self.match(MPParser.AND)
                        self.state = 129
                        self.match(MPParser.THEN)
                        self.state = 131
                        self.exp2()
                        pass

                    elif la_ == 2:
                        localctx = MPParser.Exp1Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp1)
                        self.state = 132
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")

                        self.state = 133
                        self.match(MPParser.OR)
                        self.state = 134
                        self.match(MPParser.ELSE)
                        self.state = 136
                        self.exp2()
                        pass

             
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp3(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Exp3Context)
            else:
                return self.getTypedRuleContext(MPParser.Exp3Context,i)


        def EQ(self):
            return self.getToken(MPParser.EQ, 0)

        def NOTEQ(self):
            return self.getToken(MPParser.NOTEQ, 0)

        def LESSTN(self):
            return self.getToken(MPParser.LESSTN, 0)

        def GRETN(self):
            return self.getToken(MPParser.GRETN, 0)

        def GREEQ(self):
            return self.getToken(MPParser.GREEQ, 0)

        def LESSEQ(self):
            return self.getToken(MPParser.LESSEQ, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp2" ):
                return visitor.visitExp2(self)
            else:
                return visitor.visitChildren(self)




    def exp2(self):

        localctx = MPParser.Exp2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exp2)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.exp3(0)
                self.state = 143
                self.match(MPParser.EQ)
                self.state = 144
                self.exp3(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.exp3(0)
                self.state = 147
                self.match(MPParser.NOTEQ)
                self.state = 148
                self.exp3(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 150
                self.exp3(0)
                self.state = 151
                self.match(MPParser.LESSTN)
                self.state = 152
                self.exp3(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 154
                self.exp3(0)
                self.state = 155
                self.match(MPParser.GRETN)
                self.state = 156
                self.exp3(0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 158
                self.exp3(0)
                self.state = 159
                self.match(MPParser.GREEQ)
                self.state = 160
                self.exp3(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 162
                self.exp3(0)
                self.state = 163
                self.match(MPParser.LESSEQ)
                self.state = 164
                self.exp3(0)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 166
                self.exp3(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp4(self):
            return self.getTypedRuleContext(MPParser.Exp4Context,0)


        def exp3(self):
            return self.getTypedRuleContext(MPParser.Exp3Context,0)


        def ADD(self):
            return self.getToken(MPParser.ADD, 0)

        def SUBNE(self):
            return self.getToken(MPParser.SUBNE, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp3" ):
                return visitor.visitExp3(self)
            else:
                return visitor.visitChildren(self)



    def exp3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_exp3, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.exp4(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 183
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 181
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.Exp3Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp3)
                        self.state = 172
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 173
                        self.match(MPParser.ADD)
                        self.state = 174
                        self.exp4(0)
                        pass

                    elif la_ == 2:
                        localctx = MPParser.Exp3Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp3)
                        self.state = 175
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 176
                        self.match(MPParser.SUBNE)
                        self.state = 177
                        self.exp4(0)
                        pass

                    elif la_ == 3:
                        localctx = MPParser.Exp3Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp3)
                        self.state = 178
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 179
                        self.match(MPParser.OR)
                        self.state = 180
                        self.exp4(0)
                        pass

             
                self.state = 185
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Exp4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp5(self):
            return self.getTypedRuleContext(MPParser.Exp5Context,0)


        def exp4(self):
            return self.getTypedRuleContext(MPParser.Exp4Context,0)


        def DIVSI(self):
            return self.getToken(MPParser.DIVSI, 0)

        def MUL(self):
            return self.getToken(MPParser.MUL, 0)

        def MOD(self):
            return self.getToken(MPParser.MOD, 0)

        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def DIV(self):
            return self.getToken(MPParser.DIV, 0)

        def getRuleIndex(self):
            return MPParser.RULE_exp4

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp4" ):
                return visitor.visitExp4(self)
            else:
                return visitor.visitChildren(self)



    def exp4(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Exp4Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_exp4, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.exp5()
            self._ctx.stop = self._input.LT(-1)
            self.state = 206
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 204
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = MPParser.Exp4Context(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp4)
                        self.state = 189
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 190
                        self.match(MPParser.DIVSI)
                        self.state = 191
                        self.exp5()
                        pass
